# poisson-solver-comparison

./: CMakeLists.txt  README.md
include/: solver_iface.hpp
src/: core.cpp  hypre_solver.cpp  hypre_struct_bicgstab_solver.cpp  hypre_struct_solver.cpp  main.cpp  petsc_solver.cpp  petsc_struct_solver.cpp
